# dodo_payments_backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  init.sql
.sqlx/: query-2850d78778edce85be36de6c7136b9dd32d600f5b905a3b8502d219d65d2cd1a.json  query-bcbe9a80769361be9ba37274ceca044f1169f6ce7ef12f29a2a1c4b60b27fbdb.json  query-ee1d2af2243207af6104afe635d01877e33824a3665be64d973f4606bf66b1cf.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20250522092120_create_users_and_transactions.sql
src/: db.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs
src/handlers/: transaction.rs  user.rs
src/middleware/: auth.rs
src/utils/: hash.rs  jwt.rs
tests/: health.rs  integration.rs  unit_tests.rs
tests/common/: mod.rs
